Home section right overflow fixed

--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
 
 body{
     background-color: #C71111;
-    position: relative;
+    box-sizing: border-box;
+    padding: 0;
 }
 
 #navigation{
@@ -65,9 +66,7 @@ body{
     font-family: 'BoldGroove', sans-serif;
 }
 
-#home{
-    display: flex;
-}
+
 
 .home-content{
     display: flex;
